--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   "homepage": "https://github.com/GearzYs/WaterBnB_2200183#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.0.4",
-    "mqtt": "^5.3.4",
-    "path": "^0.12.7",
-    "socketio": "^1.0.0"
+    "mqtt": "^5.3.4"
   }
 }
